Fixed broken h1 css styling which got too big

--- a/css/main.css
+++ b/css/main.css
@@ -10,20 +10,10 @@ body {
     background-color: #EFBD37;
     display: block;
 }
-/*
-h1 {
-    font-size: 1.5em;
-}
-h2{
-    font-size: 1em;
-}
-p{
-    font-size: 0.9em;
-}
-*/
+
 @media only screen and (min-width: 640px) {
     h1 {
-        font-size: 5.9vw;
+        font-size: 5.0vh;
     }
     h2 {
         font-size: 3.0vh;
@@ -32,6 +22,9 @@ p{
         font-size: 2vmin;
     }
 }
+
+
+
 .box {
     width: 100%;
     text-align: center;
